--- a/LastOrder/Main/Main.csproj
+++ b/LastOrder/Main/Main.csproj
@@ -52,6 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FormAdminLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAdminLogin.Designer.cs">
+      <DependentUpon>FormAdminLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormEventManage.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,12 @@
     <Compile Include="FormSalesStats.Designer.cs">
       <DependentUpon>FormSalesStats.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormSelfCheckout.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormSelfCheckout.Designer.cs">
+      <DependentUpon>FormSelfCheckout.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormShipmentList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +120,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="FormAdminLogin.resx">
+      <DependentUpon>FormAdminLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormEventManage.resx">
+      <DependentUpon>FormEventManage.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FormProductManage.resx">
       <DependentUpon>FormProductManage.cs</DependentUpon>
     </EmbeddedResource>
@@ -122,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormSalesStats.resx">
       <DependentUpon>FormSalesStats.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormSelfCheckout.resx">
+      <DependentUpon>FormSelfCheckout.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormShipmentList.resx">
       <DependentUpon>FormShipmentList.cs</DependentUpon>
